--- a/challagesimpson/src/main/resources/application.properties
+++ b/challagesimpson/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8083
+
+table.pharase= Phrases_tbl
+table.characters = Characters_tbl
+
+file.phrases = Files/phrases.json
+file.characters = Files/characters.json
