--- a/challagesimpson/src/main/resources/application.properties
+++ b/challagesimpson/src/main/resources/application.properties
@@ -5,3 +5,5 @@ table.characters = Characters_tbl
 
 file.phrases = Files/phrases.json
 file.characters = Files/characters.json
+
+jwt.secret=simpson
