--- a/challagesimpson/pom.xml
+++ b/challagesimpson/pom.xml
@@ -6,7 +6,6 @@
 	<artifactId>challagesimpson</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -38,13 +37,25 @@
 			<version>11.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+	
+
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
 	</dependencies>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
 
 	<build>
 		<plugins>
